fix events registeration link spacing on mobile view (#187)

--- a/less/_components/events/eclipsefdn-registration.less
+++ b/less/_components/events/eclipsefdn-registration.less
@@ -20,6 +20,10 @@
   }
 }
 
+.eclipsefdn-registration-links li {
+  margin-bottom: 5px;
+}
+
 .eclipsefdn-registration-links:only-child { 
   margin-top: 20px 
 }
